2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh
	* flower/include/array.hh (reverse, swap): Detach from class.
	Update users.
	
	* flower/include/std-vector.hh
	* flower/include/array.hh (concat): Globally change to insert ().

	
	* flower/include/std-vector.hh
	* flower/include/parray.hh
	* flower/include/array.hh (elem, elem_ref): Globally replace by
	at ().

2006-02-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): use ly: prefix for members.

	* python/convertrules.py (FatalConversionError.sub_cxx_id):
	anticipate on identifier substitutions.

2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh (insert): Remove, replace by
	std::vector interface.  Update callers.

	* flower/include/array.icc (insert): Change signature to
	match std::vector interface.
	
	* flower/include/array.icc (vector_sort): Bugfix.

2006-02-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/parser.yy (output_def_head_with_mode_switch): new
	production. Result: dashes and underscores may be used in the
	\paper block.

	* lily/lexer.ll: add DASHED_WORD.  Accept in INITIAL mode.

	* python/convertrules.py (conv): oops. One slash too much.

2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh (sort): Remove, replace by
	::vector_sort.  Update callers.

	* flower/include/std-vector.hh (slice): Remove.  Update callers.
	(sort): Bugfix.

	* flower/test-std.cc (vector_sort): New test.

2006-02-01  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/putting.itely: fixes from Erik.

2006-02-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/test-std.cc: Add simple unit test for vector migration.

	* stepmake/stepmake/test*: Unit test support.

	* flower/include/std-vector.hh (del): Remove.  Use erase (),
	update callers.

	* flower/include/array.hh (begin, end): Add.
	(del, get): Remove.

2006-02-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>
