@@ -88,7 +88,7 @@ Polynomial::clean ()
     We only do relative comparisons. Absolute comparisons break down in
     degenerate cases.  */
   while (degree () > 0
-	 && (fabs (coefs_.back ()) < FUDGE * fabs (coefs_.top (1))
+	 && (fabs (coefs_.back ()) < FUDGE * fabs (back (coefs_, 1))
 	     || !coefs_.back ()))
     coefs_.pop_back ();
 }
