@@ -1,6 +1,11 @@
 2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>
 
-	* flower/include/std-vector.hh
+	* flower/string-convert.cc (convert::unsigned_string): Bugfix:
+	remove superfluous `d'.
+
+	* flower/include/std-vector.hh (boundary, top): Detach from class.
+	Remove empty vector shell.
+
 	* flower/include/array.hh (reverse, swap): Detach from class.
 	Update users.
 	
